Go to C/GoParser.java
/* Generated By:JavaCC: Do not edit this line. GoParser.java */
import syntaxtree.*;
import java.util.Vector;


public class GoParser implements GoParserConstants {

  static final public Goal Goal() throws ParseException {
   Packages n0;
   Imports n1;
   NodeListOptional n2 = new NodeListOptional();
   FunctionDeclaration n3;
   NodeToken n4;
   Token n5;
    n0 = Packages();
    n1 = Imports();
    label_1:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case FUNC:
        ;
        break;
      default:
        jj_la1[0] = jj_gen;
        break label_1;
      }
      n3 = FunctionDeclaration();
        n2.addNode(n3);
    }
     n2.nodes.trimToSize();
    n5 = jj_consume_token(0);
      n5.beginColumn++; n5.endColumn++;
      n4 = JTBToolkit.makeNodeToken(n5);
     {if (true) return new Goal(n0,n1,n2,n4);}
    throw new Error("Missing return statement in function");
  }

  static final public Packages Packages() throws ParseException {
   NodeToken n0;
   Token n1;
   Identifier n2;
    n1 = jj_consume_token(PACKAGE);
                  n0 = JTBToolkit.makeNodeToken(n1);
    n2 = Identifier();
     {if (true) return new Packages(n0,n2);}
    throw new Error("Missing return statement in function");
  }

  static final public Imports Imports() throws ParseException {
   NodeChoice n0;
   NodeSequence n1;
   NodeToken n2;
   Token n3;
   NodeToken n4;
   Token n5;
   Identifier n6;
   NodeToken n7;
   Token n8;
   NodeSequence n9;
   NodeToken n10;
   Token n11;
   NodeToken n12;
   Token n13;
   NodeListOptional n14 = new NodeListOptional();
   NodeSequence n15;
   NodeToken n16;
   Token n17;
   Identifier n18;
   NodeToken n19;
   Token n20;
   NodeToken n21;
   Token n22;
    if (jj_2_1(2)) {
        n1 = new NodeSequence(5);
      n3 = jj_consume_token(IMPORT);
                    n2 = JTBToolkit.makeNodeToken(n3);
        n1.addNode(n2);
      n5 = jj_consume_token(52);
                n4 = JTBToolkit.makeNodeToken(n5);
        n1.addNode(n4);
      n6 = Identifier();
        n1.addNode(n6);
      n8 = jj_consume_token(52);
                n7 = JTBToolkit.makeNodeToken(n8);
        n1.addNode(n7);
        n0 = new NodeChoice(n1, 0);
    } else {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case IMPORT:
        n9 = new NodeSequence(4);
        n11 = jj_consume_token(IMPORT);
                     n10 = JTBToolkit.makeNodeToken(n11);
        n9.addNode(n10);
        n13 = jj_consume_token(LPAREN);
                n12 = JTBToolkit.makeNodeToken(n13);
        n9.addNode(n12);
        label_2:
        while (true) {
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case 52:
            ;
            break;
          default:
            jj_la1[1] = jj_gen;
            break label_2;
          }
           n15 = new NodeSequence(3);
          n17 = jj_consume_token(52);
                    n16 = JTBToolkit.makeNodeToken(n17);
           n15.addNode(n16);
          n18 = Identifier();
           n15.addNode(n18);
          n20 = jj_consume_token(52);
                    n19 = JTBToolkit.makeNodeToken(n20);
           n15.addNode(n19);
           n14.addNode(n15);
        }
        n14.nodes.trimToSize();
        n9.addNode(n14);
        n22 = jj_consume_token(RPAREN);
                n21 = JTBToolkit.makeNodeToken(n22);
        n9.addNode(n21);
        n0 = new NodeChoice(n9, 1);
        break;
      default:
        jj_la1[2] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
     {if (true) return new Imports(n0);}
    throw new Error("Missing return statement in function");
  }

  static final public FunctionDeclaration FunctionDeclaration() throws ParseException {
   NodeToken n0;
   Token n1;
   Identifier n2;
   Signature n3;
   NodeOptional n4 = new NodeOptional();
   Type n5;
   NodeToken n6;
   Token n7;
   NodeListOptional n8 = new NodeListOptional();
   VarDeclaration n9;
   NodeListOptional n10 = new NodeListOptional();
   Statement n11;
   NodeOptional n12 = new NodeOptional();
   NodeSequence n13;
   NodeToken n14;
   Token n15;
   Expression n16;
   NodeToken n17;
   Token n18;
    n1 = jj_consume_token(FUNC);
               n0 = JTBToolkit.makeNodeToken(n1);
    n2 = Identifier();
    n3 = Signature();
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case INTEGER:
      n5 = Type();
        n4.addNode(n5);
      break;
    default:
      jj_la1[3] = jj_gen;
      ;
    }
    n7 = jj_consume_token(LBRACE);
            n6 = JTBToolkit.makeNodeToken(n7);
    label_3:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case VAR:
        ;
        break;
      default:
        jj_la1[4] = jj_gen;
        break label_3;
      }
      n9 = VarDeclaration();
        n8.addNode(n9);
    }
     n8.nodes.trimToSize();
    label_4:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case LBRACE:
      case IF:
      case WHILE:
      case PRINT:
      case FOR:
      case IDENTIFIER:
      case 57:
        ;
        break;
      default:
        jj_la1[5] = jj_gen;
        break label_4;
      }
      n11 = Statement();
        n10.addNode(n11);
    }
     n10.nodes.trimToSize();
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case RETURN:
        n13 = new NodeSequence(2);
      n15 = jj_consume_token(RETURN);
                     n14 = JTBToolkit.makeNodeToken(n15);
        n13.addNode(n14);
      n16 = Expression();
        n13.addNode(n16);
        n12.addNode(n13);
      break;
    default:
      jj_la1[6] = jj_gen;
      ;
    }
    n18 = jj_consume_token(RBRACE);
             n17 = JTBToolkit.makeNodeToken(n18);
     {if (true) return new FunctionDeclaration(n0,n2,n3,n4,n6,n8,n10,n12,n17);}
    throw new Error("Missing return statement in function");
  }

  static final public Signature Signature() throws ParseException {
   NodeToken n0;
   Token n1;
   NodeOptional n2 = new NodeOptional();
   NodeSequence n3;
   Identifier n4;
   NodeOptional n5;
   Type n6;
   NodeListOptional n7;
   NodeSequence n8;
   NodeToken n9;
   Token n10;
   Identifier n11;
   NodeOptional n12;
   Type n13;
   NodeToken n14;
   Token n15;
    n1 = jj_consume_token(LPAREN);
            n0 = JTBToolkit.makeNodeToken(n1);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case IDENTIFIER:
        n5 = new NodeOptional();
        n7 = new NodeListOptional();
        n3 = new NodeSequence(3);
      n4 = Identifier();
        n3.addNode(n4);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case INTEGER:
        n6 = Type();
           n5.addNode(n6);
        break;
      default:
        jj_la1[7] = jj_gen;
        ;
      }
        n3.addNode(n5);
      label_5:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case 53:
          ;
          break;
        default:
          jj_la1[8] = jj_gen;
          break label_5;
        }
           n12 = new NodeOptional();
           n8 = new NodeSequence(3);
        n10 = jj_consume_token(53);
                   n9 = JTBToolkit.makeNodeToken(n10);
           n8.addNode(n9);
        n11 = Identifier();
           n8.addNode(n11);
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case INTEGER:
          n13 = Type();
              n12.addNode(n13);
          break;
        default:
          jj_la1[9] = jj_gen;
          ;
        }
           n8.addNode(n12);
           n7.addNode(n8);
      }
        n7.nodes.trimToSize();
        n3.addNode(n7);
        n2.addNode(n3);
      break;
    default:
      jj_la1[10] = jj_gen;
      ;
    }
    n15 = jj_consume_token(RPAREN);
             n14 = JTBToolkit.makeNodeToken(n15);
     {if (true) return new Signature(n0,n2,n14);}
    throw new Error("Missing return statement in function");
  }

  static final public Type Type() throws ParseException {
   NodeToken n0;
   Token n1;
    n1 = jj_consume_token(INTEGER);
              n0 = JTBToolkit.makeNodeToken(n1);
     {if (true) return new Type(n0);}
    throw new Error("Missing return statement in function");
  }

  static final public Identifier Identifier() throws ParseException {
   NodeToken n0;
   Token n1;
    n1 = jj_consume_token(IDENTIFIER);
                     n0 = JTBToolkit.makeNodeToken(n1);
     {if (true) return new Identifier(n0);}
    throw new Error("Missing return statement in function");
  }

  static final public Statement Statement() throws ParseException {
   NodeChoice n0;
   Block n1;
   AssignmentStatement n2;
   IfStatement n3;
   WhileStatement n4;
   ForStatement n5;
   PrintStatement n6;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case LBRACE:
      n1 = Block();
        n0 = new NodeChoice(n1, 0);
      break;
    case IDENTIFIER:
      n2 = AssignmentStatement();
        n0 = new NodeChoice(n2, 1);
      break;
    case IF:
      n3 = IfStatement();
        n0 = new NodeChoice(n3, 2);
      break;
    case WHILE:
      n4 = WhileStatement();
        n0 = new NodeChoice(n4, 3);
      break;
    case FOR:
      n5 = ForStatement();
        n0 = new NodeChoice(n5, 4);
      break;
    case PRINT:
    case 57:
      n6 = PrintStatement();
        n0 = new NodeChoice(n6, 5);
      break;
    default:
      jj_la1[11] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
     {if (true) return new Statement(n0);}
    throw new Error("Missing return statement in function");
  }

  static final public Block Block() throws ParseException {
   NodeToken n0;
   Token n1;
   NodeListOptional n2 = new NodeListOptional();
   VarDeclaration n3;
   NodeListOptional n4 = new NodeListOptional();
   Statement n5;
   NodeToken n6;
   Token n7;
    n1 = jj_consume_token(LBRACE);
            n0 = JTBToolkit.makeNodeToken(n1);
    label_6:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case VAR:
        ;
        break;
      default:
        jj_la1[12] = jj_gen;
        break label_6;
      }
      n3 = VarDeclaration();
        n2.addNode(n3);
    }
     n2.nodes.trimToSize();
    label_7:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case LBRACE:
      case IF:
      case WHILE:
      case PRINT:
      case FOR:
      case IDENTIFIER:
      case 57:
        ;
        break;
      default:
        jj_la1[13] = jj_gen;
        break label_7;
      }
      n5 = Statement();
        n4.addNode(n5);
    }
     n4.nodes.trimToSize();
    n7 = jj_consume_token(RBRACE);
            n6 = JTBToolkit.makeNodeToken(n7);
     {if (true) return new Block(n0,n2,n4,n6);}
    throw new Error("Missing return statement in function");
  }

  static final public VarDeclaration VarDeclaration() throws ParseException {
   NodeToken n0;
   Token n1;
   Identifier n2;
   NodeListOptional n3 = new NodeListOptional();
   NodeSequence n4;
   NodeToken n5;
   Token n6;
   Identifier n7;
   Type n8;
    n1 = jj_consume_token(VAR);
              n0 = JTBToolkit.makeNodeToken(n1);
    n2 = Identifier();
    label_8:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 53:
        ;
        break;
      default:
        jj_la1[14] = jj_gen;
        break label_8;
      }
        n4 = new NodeSequence(2);
      n6 = jj_consume_token(53);
               n5 = JTBToolkit.makeNodeToken(n6);
        n4.addNode(n5);
      n7 = Identifier();
        n4.addNode(n7);
        n3.addNode(n4);
    }
     n3.nodes.trimToSize();
    n8 = Type();
     {if (true) return new VarDeclaration(n0,n2,n3,n8);}
    throw new Error("Missing return statement in function");
  }

  static final public AssignmentStatement AssignmentStatement() throws ParseException {
   Identifier n0;
   NodeToken n1;
   Token n2;
   Expression n3;
    n0 = Identifier();
    n2 = jj_consume_token(54);
            n1 = JTBToolkit.makeNodeToken(n2);
    n3 = Expression();
     {if (true) return new AssignmentStatement(n0,n1,n3);}
    throw new Error("Missing return statement in function");
  }

  static final public IfStatement IfStatement() throws ParseException {
   NodeToken n0;
   Token n1;
   Expression n2;
   Statement n3;
   NodeOptional n4 = new NodeOptional();
   NodeSequence n5;
   NodeToken n6;
   Token n7;
   Statement n8;
    n1 = jj_consume_token(IF);
             n0 = JTBToolkit.makeNodeToken(n1);
    n2 = Expression();
    n3 = Statement();
    if (jj_2_2(2)) {
        n5 = new NodeSequence(2);
      n7 = jj_consume_token(ELSE);
                  n6 = JTBToolkit.makeNodeToken(n7);
        n5.addNode(n6);
      n8 = Statement();
        n5.addNode(n8);
        n4.addNode(n5);
    } else {
      ;
    }
     {if (true) return new IfStatement(n0,n2,n3,n4);}
    throw new Error("Missing return statement in function");
  }

  static final public WhileStatement WhileStatement() throws ParseException {
   NodeToken n0;
   Token n1;
   Expression n2;
   NodeToken n3;
   Token n4;
   Statement n5;
   NodeToken n6;
   Token n7;
    n1 = jj_consume_token(WHILE);
                n0 = JTBToolkit.makeNodeToken(n1);
    n2 = Expression();
    n4 = jj_consume_token(LBRACE);
            n3 = JTBToolkit.makeNodeToken(n4);
    n5 = Statement();
    n7 = jj_consume_token(RBRACE);
            n6 = JTBToolkit.makeNodeToken(n7);
     {if (true) return new WhileStatement(n0,n2,n3,n5,n6);}
    throw new Error("Missing return statement in function");
  }

  static final public ForStatement ForStatement() throws ParseException {
   NodeToken n0;
   Token n1;
   NodeOptional n2 = new NodeOptional();
   AssignmentStatement n3;
   NodeToken n4;
   Token n5;
   NodeOptional n6 = new NodeOptional();
   Expression n7;
   NodeToken n8;
   Token n9;
   NodeOptional n10 = new NodeOptional();
   NodeChoice n11;
   AssignmentStatement n12;
   IncrementStatement n13;
   NodeToken n14;
   Token n15;
   Statement n16;
   NodeToken n17;
   Token n18;
    n1 = jj_consume_token(FOR);
              n0 = JTBToolkit.makeNodeToken(n1);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case IDENTIFIER:
      n3 = AssignmentStatement();
        n2.addNode(n3);
      break;
    default:
      jj_la1[15] = jj_gen;
      ;
    }
    n5 = jj_consume_token(SEMICOLON);
            n4 = JTBToolkit.makeNodeToken(n5);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case LPAREN:
    case INTEGER_LITERAL:
    case IDENTIFIER:
      n7 = Expression();
        n6.addNode(n7);
      break;
    default:
      jj_la1[16] = jj_gen;
      ;
    }
    n9 = jj_consume_token(SEMICOLON);
            n8 = JTBToolkit.makeNodeToken(n9);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case IDENTIFIER:
    case 55:
    case 56:
      if (jj_2_3(3)) {
        n12 = AssignmentStatement();
           n11 = new NodeChoice(n12, 0);
      } else {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case IDENTIFIER:
        case 55:
        case 56:
          n13 = IncrementStatement();
           n11 = new NodeChoice(n13, 1);
          break;
        default:
          jj_la1[17] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
        n10.addNode(n11);
      break;
    default:
      jj_la1[18] = jj_gen;
      ;
    }
    n15 = jj_consume_token(LBRACE);
             n14 = JTBToolkit.makeNodeToken(n15);
    n16 = Statement();
    n18 = jj_consume_token(RBRACE);
             n17 = JTBToolkit.makeNodeToken(n18);
     {if (true) return new ForStatement(n0,n2,n4,n6,n8,n10,n14,n16,n17);}
    throw new Error("Missing return statement in function");
  }

  static final public IncrementStatement IncrementStatement() throws ParseException {
   NodeChoice n0;
   NodeSequence n1;
   NodeToken n2;
   Token n3;
   Identifier n4;
   NodeSequence n5;
   NodeToken n6;
   Token n7;
   Identifier n8;
   NodeSequence n9;
   Identifier n10;
   NodeToken n11;
   Token n12;
   NodeSequence n13;
   Identifier n14;
   NodeToken n15;
   Token n16;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 55:
        n1 = new NodeSequence(2);
      n3 = jj_consume_token(55);
                n2 = JTBToolkit.makeNodeToken(n3);
        n1.addNode(n2);
      n4 = Identifier();
        n1.addNode(n4);
        n0 = new NodeChoice(n1, 0);
      break;
    case 56:
        n5 = new NodeSequence(2);
      n7 = jj_consume_token(56);
                n6 = JTBToolkit.makeNodeToken(n7);
        n5.addNode(n6);
      n8 = Identifier();
        n5.addNode(n8);
        n0 = new NodeChoice(n5, 1);
      break;
    default:
      jj_la1[19] = jj_gen;
      if (jj_2_4(2)) {
        n9 = new NodeSequence(3);
        n10 = Identifier();
        n9.addNode(n10);
        n12 = jj_consume_token(55);
                 n11 = JTBToolkit.makeNodeToken(n12);
        n9.addNode(n11);
        n0 = new NodeChoice(n9, 2);
      } else {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case IDENTIFIER:
        n13 = new NodeSequence(2);
          n14 = Identifier();
        n13.addNode(n14);
          n16 = jj_consume_token(56);
                 n15 = JTBToolkit.makeNodeToken(n16);
        n13.addNode(n15);
        n0 = new NodeChoice(n13, 3);
          break;
        default:
          jj_la1[20] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
    }
     {if (true) return new IncrementStatement(n0);}
    throw new Error("Missing return statement in function");
  }

  static final public PrintStatement PrintStatement() throws ParseException {
   NodeChoice n0;
   NodeSequence n1;
   NodeToken n2;
   Token n3;
   NodeToken n4;
   Token n5;
   Expression n6;
   NodeToken n7;
   Token n8;
   NodeSequence n9;
   NodeToken n10;
   Token n11;
   NodeToken n12;
   Token n13;
   Expression n14;
   NodeToken n15;
   Token n16;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case PRINT:
        n1 = new NodeSequence(4);
      n3 = jj_consume_token(PRINT);
                         n2 = JTBToolkit.makeNodeToken(n3);
        n1.addNode(n2);
      n5 = jj_consume_token(LPAREN);
               n4 = JTBToolkit.makeNodeToken(n5);
        n1.addNode(n4);
      n6 = Expression();
        n1.addNode(n6);
      n8 = jj_consume_token(RPAREN);
               n7 = JTBToolkit.makeNodeToken(n8);
        n1.addNode(n7);
        n0 = new NodeChoice(n1, 0);
      break;
    case 57:
        n9 = new NodeSequence(4);
      n11 = jj_consume_token(57);
                         n10 = JTBToolkit.makeNodeToken(n11);
        n9.addNode(n10);
      n13 = jj_consume_token(LPAREN);
                n12 = JTBToolkit.makeNodeToken(n13);
        n9.addNode(n12);
      n14 = Expression();
        n9.addNode(n14);
      n16 = jj_consume_token(RPAREN);
                n15 = JTBToolkit.makeNodeToken(n16);
        n9.addNode(n15);
        n0 = new NodeChoice(n9, 1);
      break;
    default:
      jj_la1[21] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
     {if (true) return new PrintStatement(n0);}
    throw new Error("Missing return statement in function");
  }

  static final public Expression Expression() throws ParseException {
   NodeChoice n0;
   AndExpression n1;
   CompareExpression n2;
   EqualityExpression n3;
   PlusExpression n4;
   MinusExpression n5;
   TimesExpression n6;
   PrimaryExpression n7;
    if (jj_2_5(2147483647)) {
      n1 = AndExpression();
        n0 = new NodeChoice(n1, 0);
    } else if (jj_2_6(2147483647)) {
      n2 = CompareExpression();
        n0 = new NodeChoice(n2, 1);
    } else if (jj_2_7(2147483647)) {
      n3 = EqualityExpression();
        n0 = new NodeChoice(n3, 2);
    } else if (jj_2_8(2147483647)) {
      n4 = PlusExpression();
        n0 = new NodeChoice(n4, 3);
    } else if (jj_2_9(2147483647)) {
      n5 = MinusExpression();
        n0 = new NodeChoice(n5, 4);
    } else if (jj_2_10(2147483647)) {
      n6 = TimesExpression();
        n0 = new NodeChoice(n6, 5);
    } else {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case LPAREN:
      case INTEGER_LITERAL:
      case IDENTIFIER:
        n7 = PrimaryExpression();
        n0 = new NodeChoice(n7, 6);
        break;
      default:
        jj_la1[22] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
     {if (true) return new Expression(n0);}
    throw new Error("Missing return statement in function");
  }

  static final public AndExpression AndExpression() throws ParseException {
   PrimaryExpression n0;
   NodeToken n1;
   Token n2;
   PrimaryExpression n3;
    n0 = PrimaryExpression();
    n2 = jj_consume_token(AND);
            n1 = JTBToolkit.makeNodeToken(n2);
    n3 = PrimaryExpression();
     {if (true) return new AndExpression(n0,n1,n3);}
    throw new Error("Missing return statement in function");
  }

  static final public CompareExpression CompareExpression() throws ParseException {
   PrimaryExpression n0;
   NodeToken n1;
   Token n2;
   PrimaryExpression n3;
    n0 = PrimaryExpression();
    n2 = jj_consume_token(LT);
            n1 = JTBToolkit.makeNodeToken(n2);
    n3 = PrimaryExpression();
     {if (true) return new CompareExpression(n0,n1,n3);}
    throw new Error("Missing return statement in function");
  }

  static final public EqualityExpression EqualityExpression() throws ParseException {
   PrimaryExpression n0;
   NodeToken n1;
   Token n2;
   PrimaryExpression n3;
    n0 = PrimaryExpression();
    n2 = jj_consume_token(58);
             n1 = JTBToolkit.makeNodeToken(n2);
    n3 = PrimaryExpression();
     {if (true) return new EqualityExpression(n0,n1,n3);}
    throw new Error("Missing return statement in function");
  }

  static final public PlusExpression PlusExpression() throws ParseException {
   PrimaryExpression n0;
   NodeToken n1;
   Token n2;
   PrimaryExpression n3;
    n0 = PrimaryExpression();
    n2 = jj_consume_token(PLUS);
            n1 = JTBToolkit.makeNodeToken(n2);
    n3 = PrimaryExpression();
     {if (true) return new PlusExpression(n0,n1,n3);}
    throw new Error("Missing return statement in function");
  }

  static final public MinusExpression MinusExpression() throws ParseException {
   PrimaryExpression n0;
   NodeToken n1;
   Token n2;
   PrimaryExpression n3;
    n0 = PrimaryExpression();
    n2 = jj_consume_token(MINUS);
            n1 = JTBToolkit.makeNodeToken(n2);
    n3 = PrimaryExpression();
     {if (true) return new MinusExpression(n0,n1,n3);}
    throw new Error("Missing return statement in function");
  }

  static final public TimesExpression TimesExpression() throws ParseException {
   PrimaryExpression n0;
   NodeToken n1;
   Token n2;
   PrimaryExpression n3;
    n0 = PrimaryExpression();
    n2 = jj_consume_token(STAR);
            n1 = JTBToolkit.makeNodeToken(n2);
    n3 = PrimaryExpression();
     {if (true) return new TimesExpression(n0,n1,n3);}
    throw new Error("Missing return statement in function");
  }

  static final public PrimaryExpression PrimaryExpression() throws ParseException {
   NodeChoice n0;
   IntegerLiteral n1;
   Identifier n2;
   BracketExpression n3;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case INTEGER_LITERAL:
      n1 = IntegerLiteral();
        n0 = new NodeChoice(n1, 0);
      break;
    case IDENTIFIER:
      n2 = Identifier();
        n0 = new NodeChoice(n2, 1);
      break;
    case LPAREN:
      n3 = BracketExpression();
        n0 = new NodeChoice(n3, 2);
      break;
    default:
      jj_la1[23] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
     {if (true) return new PrimaryExpression(n0);}
    throw new Error("Missing return statement in function");
  }

  static final public IntegerLiteral IntegerLiteral() throws ParseException {
   NodeToken n0;
   Token n1;
    n1 = jj_consume_token(INTEGER_LITERAL);
                          n0 = JTBToolkit.makeNodeToken(n1);
     {if (true) return new IntegerLiteral(n0);}
    throw new Error("Missing return statement in function");
  }

  static final public BracketExpression BracketExpression() throws ParseException {
   NodeToken n0;
   Token n1;
   Expression n2;
   NodeToken n3;
   Token n4;
    n1 = jj_consume_token(LPAREN);
            n0 = JTBToolkit.makeNodeToken(n1);
    n2 = Expression();
    n4 = jj_consume_token(RPAREN);
            n3 = JTBToolkit.makeNodeToken(n4);
     {if (true) return new BracketExpression(n0,n2,n3);}
    throw new Error("Missing return statement in function");
  }

  static private boolean jj_2_1(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_1(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(0, xla); }
  }

  static private boolean jj_2_2(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_2(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(1, xla); }
  }

  static private boolean jj_2_3(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_3(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(2, xla); }
  }

  static private boolean jj_2_4(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_4(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(3, xla); }
  }
